--- a/CPSC-491-main/prototype 2.1/index.html
+++ b/CPSC-491-main/prototype 2.1/index.html
@@ -16,7 +16,25 @@
 </head>
 
 <body>
-  <div id="app">
+  <div id="start-screen">
+    <h1>Code Colony</h1>
+    <div class="menu">
+      <button id="start-game-btn">Start</button>
+      <button id="settings-btn">Settings</button>
+    </div>
+  </div>
+
+  <div id="shop-screen" class="hidden">
+    <h1>Shop</h1>
+    <div class="panel" style="padding: 20px; text-align: center;">
+      <p>Welcome to the Shop!</p>
+      <p style="font-size: 0.9em; color: #aaa;">(More items coming soon)</p>
+      <br>
+      <button id="close-shop-btn">Back</button>
+    </div>
+  </div>
+
+  <div id="app" style="display: none;">
     <div id="left">
       <div class="panel" id="controls">
         <div>
@@ -36,12 +54,18 @@
 
     <div id="right">
       <canvas id="c"></canvas>
+      <div id="counters" class="panel"
+        style="position: absolute; top: 10px; right: 10px; pointer-events: none; opacity: 0.9;">
+        <span>Trees: <b id="treeCount">0</b></span>
+        <span style="margin-left:15px">Rocks: <b id="rockCount">0</b></span>
+      </div>
       <div class="panel" style="padding:10px 12px;">
         <div class="hint">
           Manual move (when not running script): <kbd>W</kbd><kbd>A</kbd><kbd>S</kbd><kbd>D</kbd>
           <br />Click <strong>Run</strong> to execute your Blockly program.
         </div>
       </div>
+      <button id="shop-btn">Shop</button>
     </div>
   </div>
 
@@ -63,6 +87,7 @@
       <block type="move_dir">
         <field name="DIR">RIGHT</field>
       </block>
+      <block type="harvest_dir"></block>
     </category>
     <category name="Loops" colour="#e0a800">
       <block type="controls_repeat_ext">
